--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,42 @@
-.App{
-     display: flex;
-     flex-direction: row;
-     position: relative;
-     font-family: 'Nunito', sans-serif;
-     font-size: clamp(1rem, 1.5vw, 1.2rem);
-     color: rgba(34, 34, 96, .6);
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
-h1, h2, h3, h4, h5, h6{
-     color: #222260;
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
 }
-body{
-     background: rgba(213, 170, 192, 0.78);
-     backdrop-filter: blur(4.5px);
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
 }
