--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App{
+/* .App{
     font-family: 'Nunito', sans-serif;
     font-size: clamp(1rem, 1.5vw, 1.2rem);
     color: rgba(34, 34, 96, .6);
@@ -9,4 +9,4 @@ h1, h2, h3, h4, h5, h6{
 body{
     background-color: rgba(244, 239, 243, 1);
     backdrop-filter: blur(4.5px);
-}
+} */
