--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .App{
-    font-family: 'Nunito', sans-serif;
-    font-size: clamp(1rem, 1.5vw, 1.2rem);
-    color: rgba(34, 34, 96, .6);
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    border-radius: 2rem;
+    width: auto;
+    height: 690px;
+    margin: 0.5rem;
 }
 h1, h2, h3, h4, h5, h6{
     color: #222260;
 }
 body{
-    background-color: rgba(244, 239, 243, 1);
     backdrop-filter: blur(4.5px);
+    font-family: cursive;
 }
