UI (Home, AddSpending)

--- a/src/components/Analysis/analysis.css
+++ b/src/components/Analysis/analysis.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=analysis.css.map */
+.Analysis {
+  padding: 1rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  height: 712px;
+  background: white;
+}/*# sourceMappingURL=analysis.css.map */
