--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,93 +1,32 @@
 .Navbar{
     width: auto;
-    border-radius: 2rem;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    background: #8CF4CF;
-    width: 20%;
-    height: 700px;
-    .user-icon{
-        display: flex;
-        flex-direction: row;
-        padding: 1rem;
-        border-radius: 2rem;
-        height: 20%;
-        img{
-            width: 90px;
-            height: 80px;
-            border-radius: 100%;
+    width: 5%;
+    height: 100%;
+    align-items: center;
+    background: #73C6B6;
+    backdrop-filter: blur(10px);
+    .menu-items{
+        border-radius: 1rem;
+        text-align: center;
+        li{
+            list-style-type: none;
+            height: auto;
+            margin: 1rem;
             cursor: pointer;
+            text-align: center;
+            width: 47px;
+            border-radius: 0.5rem;
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
         }
-        .text{
-            padding-top: 1.4rem;
-            margin-left: 0.4rem;
-            h2{
-                font-size: 20px;
-                cursor: pointer;
-            }
+        img{
+            width: 40px;
+           
+            border-radius: 0.5rem;
         }
-    }
-    .nav-items{
-        border-radius: 2.5rem;
-        background: #DEF8EF;
-        height: 80%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        .menu-items{
-            margin-top: 1.5rem;
-            li a{
-                text-decoration: none;
-                color: black;
-            }
-            li{
-                list-style-type: none;
-                height: auto;
-                margin: 1rem;
-                cursor: pointer;
-                padding-left: 1rem;
-                &:hover{
-                    border-left: 3px solid black;
-                    padding-left: 2rem;
-                }
-                &:focus{
-                    border-left: 3px solid black;
-                    padding-left: 2rem;
-                }
-            }
-            img{
-                width: 40px;
-            }
-            .title{
-                margin-left: 0.6rem;
-            }
-            .icon{
-                margin-bottom: 2rem;
-            }
-            .menu-items .actite_link{
-                color: blue;
-            }
-        }
-
-        .bottom-nav{
-            display: flex;
-            border: 2px solid black;
-            border-radius: 2rem;
-            img{
-                width: 50px;
-                height: 50px;
-            }
-            .text{
-                border: 2px solid black;
-                list-style-type: none;
-                padding-left: 1.2rem;
-                width: 100%;
-                border-radius: 2rem;
-                cursor: pointer;
-                &:hover{
-                    background: #8CF4CF;
-                }
-            }
-        }
+        
+        
     }
 }
