--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,16 @@
     display: flex;
     flex-direction: row;
     font-size: 15px;
-    border-radius: 2rem;
+    border-radius: 1rem;
     width: auto;
-    height: 690px;
-    margin: 0.5rem;
+    height: 713px;
 }
 h1, h2, h3, h4, h5, h6{
     color: #222260;
 }
 body{
-    backdrop-filter: blur(4.5px);
+    backdrop-filter: blur(10px);
     font-family: cursive;
+    /* background-image: url('src/assets/home-01.jpg'); */
+    background: #73C6B6;
 }
