--- a/src/components/AddSpending/addSpending.scss
+++ b/src/components/AddSpending/addSpending.scss
@@ -1,11 +1,11 @@
 .AddSpending{
-     margin-left: 1rem;
      padding: 1rem;
-     border-radius: 2rem;
+     border-radius: 1rem;
      display: flex;
      flex-direction: column;
-     width: 80%;
-     height: 700px;
+     width: 95%;
+     height: 712px;
+     background: #ECF0F1;
      h2{
           text-align: center;
           font-size: 25px;
@@ -94,8 +94,9 @@
      }
      .header{
           height: 800px;
-          background: #8CF4CF;
+          background: #FFFF;
           border-radius: 2rem;
+          box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
           button{
                cursor: pointer;
                border-radius: 0.5rem;
