--- a/src/components/User/user.css
+++ b/src/components/User/user.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=user.css.map */
+.User {
+  padding: 2rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  height: 712px;
+  background: white;
+}/*# sourceMappingURL=user.css.map */
