--- a/src/components/AddSpending/addSpending.scss
+++ b/src/components/AddSpending/addSpending.scss
@@ -1,9 +1,8 @@
 .AddSpending{
      padding: 1rem;
-     border-radius: 1rem;
      display: flex;
      flex-direction: column;
-     width: 95%;
+     width: 100%;
      height: 712px;
      background: #ECF0F1;
      h2{
@@ -18,14 +17,20 @@
           justify-content: space-between;
           list-style-type: none;
           height: 37px;
-          width:350px;
+          width:360px;
+          // border: 2px solid black;
           input{
                width: 220px;
                border-radius: 0.5rem;
                padding: 5px;
           }
           p{
-               margin-top: 7px;
+               margin-top: 5px;
+          }
+          img{
+               width: 25px;
+               margin-right: 5px;
+               margin-bottom: 5px;
           }
      }
      .day_time{
@@ -57,7 +62,7 @@
                li{
                     display: flex;
                     flex-direction: row;
-                    justify-content: flex-start;
+                    justify-content: space-between;
                }
                p{
                     margin-right: 1rem;
@@ -74,11 +79,14 @@
           height: auto;
           li{
                margin-right: 2rem;
+               display: flex;
+               flex-direction: row;
           }
      }
      .image{
-          margin-right: 6rem;
+          margin-right: 6.5rem;
      }
+     
      .input-group{
           .custom-file{
                background: #ffff;
