--- a/src/components/Analysis/analysis.css
+++ b/src/components/Analysis/analysis.css
@@ -1,9 +1,28 @@
 .Analysis {
   padding: 1rem;
-  border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  width: 95%;
-  height: 712px;
+  width: 100%;
+  height: 100vh;
+  background: #ECF0F1;
+}
+.Analysis .nav {
+  margin-bottom: 1rem;
+  width: 210px;
+}
+.Analysis .nav li {
+  padding: 5px;
+  width: 70px;
+  text-align: center;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+.Analysis .nav li:hover {
   background: white;
+}
+.Analysis .chart {
+  width: 100%;
+}
+.Analysis .chart .chart-bar {
+  width: 100%;
 }/*# sourceMappingURL=analysis.css.map */
