--- a/src/components/Analysis/analysis.scss
+++ b/src/components/Analysis/analysis.scss
@@ -1,9 +1,30 @@
 .Analysis{
      padding: 1rem;
-     border-radius: 1rem;
      display: flex;
      flex-direction: column;
-     width: 95%;
-     height: 712px;
-     background: #ffff;
+     width: 100%;
+     height: 100vh;
+     background: #ECF0F1;
+     .nav{
+          // border: 2px solid black;
+          margin-bottom: 1rem;
+          width:210px;
+          li{
+               // border: 2px solid black;
+               padding: 5px;
+               width: 70px;
+               text-align: center;
+               border-radius: 0.5rem;
+               cursor: pointer;
+               &:hover{
+                    background: #ffff;
+               }
+          }
+     }
+     .chart{
+          width: 100%;
+          .chart-bar{
+               width: 100%;
+          }
+     }
 }
