--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,11 +1,10 @@
 .Home {
   padding: 2rem;
-  border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  width: 95%;
+  width: 100%;
   height: 712px;
-  background: white;
+  background: #ECF0F1;
 }
 .Home .spending {
   display: flex;
@@ -26,6 +25,7 @@
   justify-content: space-between;
   display: flex;
   margin-bottom: 1.5rem;
+  width: 100%;
 }
 .Home .spending .money-spending li h3 {
   margin: 0.5rem;
