--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,11 +1,10 @@
 .Home{
      padding: 2rem;
-     border-radius: 1rem;
      display: flex;
      flex-direction: column;
-     width: 95%;
+     width: 100%;
      height: 712px;
-     background: #ffff;
+     background: #ECF0F1;
      
      .spending{
           display: flex;
@@ -24,6 +23,7 @@
                     justify-content: space-between;
                     display: flex;
                     margin-bottom: 1.5rem;
+                    width: 100%;
                     h3{
                          margin: 0.5rem;
                     }
