--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -1,6 +1,6 @@
 .ct-date-picker {
     appearance: none;
-    border: 1px solid rgb(209, 205, 205);
+    border: 1px solid #adccf0;
     border-radius: 6px;
     font-size: 16px;
     padding: 8px 12px;
