--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -3,6 +3,7 @@
     width: 150px;
 }
 .button-logout {
+    font-weight: 500;
     background-color: rgb(252, 107, 104);
     color: #ffffff;
     height: 40px;
@@ -13,4 +14,10 @@
 .button-logout:hover {
     background-color: #d76b6b;
     color: rgb(230, 216, 216);
+    }
+    .w-box{
+        width: 200px;
+    }
+    .t-box{
+        width: 400px;
     }
