--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@ body{
     font-family: 'Montserrat';
     font-size:medium;
     /* background-image: url('src/assets/home-01.jpg'); */
-    background: #4d5d58;
-    /* background: #f6fefc; */
+    /* background: #4d5d58; */
+    background: #f6fefc;
 }
