--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -25,4 +25,12 @@
   .error{
     color: red;
   }
-  
+  .forgot-pass{
+    width: 500px;
+  }
+  .back-login{
+    color: black;
+  }
+  .back-login:hover{
+    font-weight: 700;
+  }
