--- a/src/components/Analysis/analysis.css
+++ b/src/components/Analysis/analysis.css
@@ -8,7 +8,7 @@
 }
 .Analysis .nav {
   margin-bottom: 1rem;
-  width: 210px;
+  width: 100%;
 }
 .Analysis .nav li {
   padding: 5px;
@@ -20,9 +20,23 @@
 .Analysis .nav li:hover {
   background: white;
 }
-.Analysis .chart {
-  width: 100%;
+.Analysis .nav .option {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
-.Analysis .chart .chart-bar {
-  width: 100%;
+.Analysis .nav .btn-search {
+  margin-left: 2rem;
+  border: none;
+  background: white;
+  width: 60px;
+  border-radius: 0.5rem;
+}
+.Analysis .nav .btn-search:hover {
+  width: 70px;
+}
+.Analysis .nav .btn-search img {
+  width: 30px;
+}
+.Analysis .chart {
+  width: 1200px;
 }/*# sourceMappingURL=analysis.css.map */
