--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -73,8 +73,12 @@
 }
 
 .form-margin{
-    margin-bottom: 8rem;
+    margin-bottom: 2rem;
 }
+
+.login-page {
+    height: 100vh;
+  }
 
 @media screen and (max-width: 1364px) {
     .button-login-google {
