--- a/src/components/Analysis/analysis.scss
+++ b/src/components/Analysis/analysis.scss
@@ -7,7 +7,8 @@
      background: #ECF0F1;
      .nav{
           // border: 2px solid black;
-          margin-bottom: 1rem;
+          // margin-bottom: 1rem;
+          margin-left: 2rem;
           width:100%;
           li{
                // border: 2px solid black;
@@ -31,6 +32,7 @@
                background: #FFFF;
                width: 60px;
                border-radius: 0.5rem;
+               margin-top: 0px;
                &:hover{
                     width: 70px;
                }
