--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -34,3 +34,14 @@
   .back-login:hover{
     font-weight: 700;
   }
+
+  .changePass{
+    width: 50px;
+    margin-right: 1rem;
+  }
+  .titlePass{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  
+  
