--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,32 @@
-.img-nav{
-    width: 40px;
-    /* box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3); */
-    border-radius: 0.5rem;
-    margin-right: 5px;
+.img-nav {
+  width: 30px;
+  /* box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3); */
+  border-radius: 0.5rem;
+  margin-right: 5px;
 }
-.nav-bar{
-    border-radius: 0.5rem;
+
+.nav-bar {
+  border-radius: 0.5rem;
+  background: #E5E7E9;
 }
+.nav-bar .side-bar {
+  width: 100px;
+  height: 100vh;
+}
+.nav-bar .sider {
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
+}
+.nav-bar .menuItems {
+  border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.nav-bar .sub {
+  margin-bottom: 0.5rem;
+}
+.nav-bar .sub .item-user {
+  padding-left: 1.5rem;
+}
+.nav-bar .sub .img-user {
+  width: 25px;
+}/*# sourceMappingURL=nav.css.map */
