--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -1,36 +1,46 @@
 .form-group {
-    margin-bottom: 1rem;
-  }
-  
-  .form-label {
-    font-weight: bold;
-  }
-  
-  .form-text {
-    font-size: 0.875rem;
-    color: #1b10ee;
-  }
-  
-  .btn-primary {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    background-color: #007bff;
-    border-color: #007bff;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0069d9;
-    border-color: #0062cc;
-  }
-  .error{
-    color: red;
-  }
-  .forgot-pass{
-    width: 500px;
-  }
-  .back-login{
-    color: black;
-  }
-  .back-login:hover{
-    font-weight: 700;
-  }
+  margin-bottom: 1rem;
+}
+
+.form-label {
+  font-weight: bold;
+}
+
+.form-text {
+  font-size: 0.875rem;
+  color: #1b10ee;
+}
+
+.btn-primary {
+  padding-left: 3rem;
+  padding-right: 3rem;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0069d9;
+  border-color: #0062cc;
+}
+.error{
+  color: red;
+}
+.forgot-pass{
+  width: 500px;
+}
+.back-login{
+  color: black;
+}
+.back-login:hover{
+  font-weight: 700;
+}
+
+.changePass{
+  width: 50px;
+  margin-right: 1rem;
+}
+.titlePass{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
