--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -26,7 +26,11 @@
                     width: 30px;
                     height: 35px;
                     margin-top: 5px;
-                    margin-right: 1rem;
+               }
+               .spending-monthly{
+                    .iet-home{
+                         padding-top: 0.3rem;
+                    }
                }
           }
           
@@ -39,7 +43,7 @@
      .daily-expend{
           border-radius: 1rem;
           padding: 1rem;
-          width: 99%;
+          width: 97%;
           background: #FFFF;
           margin-bottom: 2rem;
           margin-left: 1rem;
