--- a/src/components/Analysis/analysis.css
+++ b/src/components/Analysis/analysis.css
@@ -4,10 +4,12 @@
   width: 100%;
   height: 100vh;
   background: #ECF0F1;
+  overflow: auto;
 }
 .Analysis .nav {
   margin-left: 8rem;
   width: 100%;
+  margin-top: 0.5rem;
 }
 .Analysis .nav .option {
   margin-left: 1rem;
@@ -15,14 +17,16 @@
   margin-right: 1rem;
 }
 .Analysis .nav .option .fromI {
-  width: 130px;
+  width: 150px;
   padding-top: 0px;
+  padding-bottom: 0px;
   margin: 0px;
 }
 .Analysis .nav .option .toI {
-  width: 130px;
+  width: 150px;
   padding-top: 0px;
-  padding: 0px;
+  padding-bottom: 0px;
+  margin: 0px;
 }
 .Analysis .nav .btn-search {
   margin-left: 2rem;
@@ -30,6 +34,7 @@
   background: white;
   width: 60px;
   border-radius: 0.5rem;
+  margin-top: 0px;
 }
 .Analysis .nav .btn-search:hover {
   width: 70px;
@@ -39,4 +44,5 @@
 }
 .Analysis .chart {
   width: 1200px;
+  margin-bottom: 0px;
 }/*# sourceMappingURL=analysis.css.map */
