--- a/src/components/Analysis/analysis.scss
+++ b/src/components/Analysis/analysis.scss
@@ -5,24 +5,28 @@
      width: 100%;
      height: 100vh;
      background: #ECF0F1;
+     overflow: auto;
      .nav{
           // border: 2px solid black;
           // margin-bottom: 1rem;
           margin-left: 8rem;
           width:100%;
+          margin-top: 0.5rem;
           .option{
                margin-left: 1rem;
                margin-top: 0px;
                margin-right: 1rem;
                .fromI{
-                    width: 130px;
+                    width: 150px;
                     padding-top: 0px;
+                    padding-bottom: 0px;
                     margin: 0px;
                }
                .toI{
-                    width: 130px;
+                    width: 150px;
                     padding-top: 0px;
-                    padding: 0px;
+                    padding-bottom: 0px;
+                    margin: 0px;
                }
           }
           .btn-search{
@@ -31,6 +35,7 @@
                background: #FFFF;
                width: 60px;
                border-radius: 0.5rem;
+               margin-top: 0px;
                &:hover{
                     width: 70px;
                }
@@ -43,6 +48,7 @@
      }
      .chart{
           width: 1200px;
+          margin-bottom: 0px;
      }
      
 }
