--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -47,7 +47,7 @@
 
 .background-span {
     /* background-color: rgba(244, 239, 243, 1); */
-    background-color: #f6fefc;
+    background-color: #ECF0F1;
     font-size: medium;
     color: rgb(75, 74, 74);
 }
